--- a/BudgetApp/App.razor
+++ b/BudgetApp/App.razor
@@ -1,4 +1,4 @@
-﻿@using BudgetApp.Shared
+﻿<CascadingAuthenticationState>
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)"/>
@@ -11,3 +11,4 @@
         </LayoutView>
     </NotFound>
 </Router>
+</CascadingAuthenticationState>
