--- a/BudgetApp/Shared/MainLayout.razor
+++ b/BudgetApp/Shared/MainLayout.razor
@@ -25,5 +25,10 @@
         <article class="content px-4">
             @Body
         </article>
+        
+        <RadzenDialog/>
+        <RadzenNotification/>
+        <RadzenContextMenu/>
+        <RadzenTooltip/>
     </main>
 </div>
