bootstrap update, budget summary wip

--- a/BudgetApp/Pages/Index.razor
+++ b/BudgetApp/Pages/Index.razor
@@ -1,8 +1,8 @@
 ﻿@page "/"
 @using BudgetApp.Pages.Components
 
-<PageTitle>Index</PageTitle>
-<TransactionList></TransactionList>
+<PageTitle>Dashboard</PageTitle>
+<TransactionList/>
 
 @code {
 
