--- a/BudgetApp/Pages/_Layout.cshtml
+++ b/BudgetApp/Pages/_Layout.cshtml
@@ -8,7 +8,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="~/"/>
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
     <link href="css/site.css" rel="stylesheet"/>
     <link href="BudgetApp.styles.css" rel="stylesheet"/>
@@ -28,6 +29,7 @@
     <a class="dismiss">🗙</a>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 <script src="_framework/blazor.server.js"></script>
 </body>
