--- a/BudgetApp/Pages/Components/TransactionForm.razor
+++ b/BudgetApp/Pages/Components/TransactionForm.razor
@@ -29,6 +29,12 @@
                         <div class="col-md-8">
                             <RadzenDropDown @bind-Value="TransactionModel.Status" Data="Enum.GetValues<TransactionStatusEnum>()"></RadzenDropDown>
                         </div>
+                        <div class="col-md-4 align-items-center d-flex">
+                            <RadzenLabel Text="Account"/>
+                        </div>
+                        <div class="col-md-8">
+                            <RadzenDropDown @bind-Value="TransactionModel.BankAccountId" Data="@BankAccounts" TextProperty="Name" ValueProperty="Id"/>
+                        </div>
                     </div>
                     <RadzenButton ButtonType="ButtonType.Submit" Icon="save" Text="Save" />
                 </RadzenFieldset>
@@ -48,14 +54,18 @@
     [Parameter]
     public TransactionModel? Transaction { get; set; }
 
+    [Parameter]
+    public List<BankAccountModel> BankAccounts { get; set; }
+
     private TransactionModel TransactionModel { get; set; }
     
     protected override async Task OnInitializedAsync()
     {
-        TransactionModel = Transaction ?? new TransactionModel()
+        TransactionModel = Transaction ?? new TransactionModel
         {
             Id = int.MinValue,
-            BudgetId = BudgetId
+            BudgetId = BudgetId,
+            BankAccountId = BankAccounts.FirstOrDefault(a => a.IsDefault)?.Id ?? 0
         };
     }
 
