--- a/BudgetApp/wwwroot/css/site.css
+++ b/BudgetApp/wwwroot/css/site.css
@@ -62,3 +62,12 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+
+.red-font {
+    color: darkred;
+}
+
+.green-font {
+    color: darkgreen;
+}
