--- a/BudgetApp/Pages/UserProfile/Login.razor
+++ b/BudgetApp/Pages/UserProfile/Login.razor
@@ -1,8 +1,7 @@
 @page "/login"
-
-@using BudgetApp.Domain.Objects
 @using BudgetApp.Middlewares
 @using Microsoft.AspNetCore.Components
+@using BudgetApp.Core.Features.Users.Models
 @inject NavigationManager NavigationManager
 
 <h1>Login</h1>
