--- a/BudgetApp/Pages/Index.razor
+++ b/BudgetApp/Pages/Index.razor
@@ -1,8 +1,9 @@
 ﻿@page "/"
-@using BudgetApp.Pages.Components
 @using BudgetApp.Core.Features.Budgets.Queries
 @using BudgetApp.Infrastructure
 @using MediatR
+@using BudgetApp.Pages.Components.Transactions
+@using BudgetApp.Pages.Components.BankAccounts
 @using BudgetApp.Core.Features.Budgets.Commands
 @inject IMediator Mediator
 
