--- a/BudgetApp/Shared/NavMenu.razor
+++ b/BudgetApp/Shared/NavMenu.razor
@@ -19,11 +19,14 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> History
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="login">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Login
-            </NavLink>
-        </div>
+        @if (!IsLoggedIn)
+        {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="login">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Login
+                </NavLink>
+            </div>   
+        }
     </nav>
 </div>
 
@@ -31,6 +34,21 @@
     private bool collapseNavMenu = true;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+
+    private bool IsLoggedIn = false;
+    
+    [CascadingParameter]
+    public Task<AuthenticationState> AuthState { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        var authState = await AuthState;
+        if (authState.User.Identity?.IsAuthenticated ?? false)
+        {
+            IsLoggedIn = true;
+        }
+
+    }
 
     private void ToggleNavMenu()
     {
