--- a/BudgetApp/Pages/Components/Imports/ImportedTransactionsForm.razor
+++ b/BudgetApp/Pages/Components/Imports/ImportedTransactionsForm.razor
@@ -1,32 +1,100 @@
 @using System.Dynamic
-<h3>ImportedTransactionsForm</h3>
+@using BudgetApp.Core.Features.Transactions.Commands
+@using BudgetApp.Core.Features.Transactions.Models
+@using MediatR
+@inject IMediator Mediator
 
+@if (showForm)
+{
+<RadzenTemplateForm TItem="ImportedTransactionScheme" Data="@TransactionScheme" Submit="@Submit">
+    <div class="container-fluid">
+        <div class="row">
+            <p>This is one of your imported transactions. Set value for each matching field, those values will be applied for all imported transactions</p>
+        </div>
+        <div class="row">
+            <div class="col-md-4 align-items-center d-flex">
+                <RadzenLabel Text="Date"/>
+            </div>
+            <div class="col-md-8">
+                <RadzenDropDown @bind-Value="TransactionScheme.CreateDateIndex" Data="@AvailableValues" TextProperty="Value" ValueProperty="Key"/>
+            </div>
+            <div class="col-md-4 align-items-center d-flex">
+                <RadzenLabel Text="Description"/>
+            </div>
+            <div class="col-md-8">
+                <RadzenDropDown @bind-Value="TransactionScheme.DescriptionIndex" Data="@AvailableValues" TextProperty="Value" ValueProperty="Key"/>
+            </div>
+            <div class="col-md-4 align-items-center d-flex">
+                <RadzenLabel Text="Amount"/>
+            </div>
+            <div class="col-md-8">
+                <RadzenDropDown @bind-Value="TransactionScheme.AmountIndex" Data="@AvailableValues" TextProperty="Value" ValueProperty="Key"/>
+            </div>
+            <br/>
+            <RadzenButton ButtonType="ButtonType.Submit" Icon="save" Text="Save"/>
+        </div>
+    </div>
+</RadzenTemplateForm>
+}
 
 
 @code {
 
     [Parameter]
+    public int BudgetId { get; set; }
+
+    [Parameter]
+    public int UserId { get; set; }
+
+    [Parameter]
     public List<ExpandoObject> Transactions { get; set; }
 
-    private Dictionary<int, object> AvailableValues { get; set; } = new Dictionary<int, object>();
+    private Dictionary<int, string> AvailableValues { get; } = new();
 
-    private bool ShowForm;
+    private List<string> RequiredValues { get; set; }
+
+    private ImportedTransactionScheme TransactionScheme { get; } = new ();
+
+    private bool showForm;
 
     protected override async Task OnInitializedAsync()
     {
         if (Transactions.Any())
         {
+            PrepareRequiredValues();
+
             var exampleTransaction = Transactions.First();
-            for (var i = 0; i < exampleTransaction.Count(); i++)
+            for (var i = 0; i < exampleTransaction.Count() - 1; i++)
             {
+                
                 var availableValue = exampleTransaction.ElementAt(i).Value;
-                if (availableValue != null) 
-                    AvailableValues[i] = availableValue;
+                if (availableValue != null)
+                    AvailableValues[i] = availableValue.ToString() ?? string.Empty;
             }
 
-            ShowForm = true;
-
+            showForm = true;
         }
+    }
+
+    private async Task Submit()
+    {
+        await Mediator.Send(new ImportTransactions()
+        {
+            BudgetId = BudgetId,
+            UserId = UserId,
+            ImportedTransactionScheme = TransactionScheme,
+            Transactions = Transactions
+        });
+    }
+
+    private void PrepareRequiredValues()
+    {
+        RequiredValues = new List<string>()
+        {
+            "Date",
+            "Description",
+            "Amount"
+        };
     }
 
 }
