--- a/BudgetApp/Pages/Components/Transactions/TransactionList.razor
+++ b/BudgetApp/Pages/Components/Transactions/TransactionList.razor
@@ -10,15 +10,19 @@
 @using CsvHelper
 @using System.Dynamic
 @using System.Globalization
+@using BudgetApp.Core.Services
+@using BudgetApp.Helpers
 @using BudgetApp.Pages.Components.Imports
 @inject DialogService DialogService
 @inject IMediator Mediator
 
 <div class="transactionContainer">
     <div class="buttonContainer">
+        
         <label class="rz-button">
             <RadzenButton Shade="Shade.Dark" Click="@(_ => OpenTransactionDialog())" Text="Add" ButtonStyle="ButtonStyle.Secondary"/>
         </label>
+
         <label class="rz-button" for="file-upload">
             <RadzenButton Shade="Shade.Darker" Text="Import" ButtonStyle="ButtonStyle.Secondary"/>
             <InputFile id="file-upload" OnChange="@ProcessImportedCsvFile" style="display:none;"/>
@@ -151,29 +155,17 @@
             //TODO info about required CSV file
             return;
         }
-        
-        var importedTransactions = new List<ExpandoObject>();
-        
-        await using var streamData = e.File.OpenReadStream();
-        using var reader = new StreamReader(streamData);
-        using var csv = new CsvReader(reader, CultureInfo.InvariantCulture);
-        
-        await csv.ReadAsync();
-        csv.ReadHeader();
-        while (await csv.ReadAsync())
-        {
-            var record = csv.GetRecord<dynamic>();
-            if (record is not null)
-            {
-                importedTransactions.Add(record);
-            }
-        }
 
+        var importedTransactions = await CsvService.GetRecordsFromCsvFile(e.File);
+
+        var user = await AuthState;
         var formParameters = new Dictionary<string, object>()
         {
+            {"BudgetId", BudgetId!.Value},
+            {"UserId", user.GetUserId()},
             { "Transactions", importedTransactions }
         };
         
-        await DialogService.OpenAsync<ImportedTransactionsForm>("Imported transactions", formParameters);
+        await DialogService.OpenAsync<ImportedTransactionsForm>("Imported transaction scheme", formParameters);
     }
 }
